# BurpOllama

./: .env.example  .gitattributes  .gitignore  BurpOllama.py  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  adaptive_scan.py  agent_registry.py  ai_privacy.py  ai_provider.py  api_version_tester.py  ato_chain_detector.py  attack_graph.py  auth_coverage_engine.py  auth_session.py  autonomous_planner.py  autopilot_state.py  behavioral_anomaly_detector.py  bounty_mode.py  burp_ollama.py  burp_ollama_bridge.py  burpollama  burpollama_cli.py  business_logic_classifier.py  business_logic_hunter.py  cli.py  config_manager.py  coverage_intelligence.py  coverage_v2.py  deduplication.py  delta_tracker.py  discovery_workflows.py  distributed_scheduler.py  docker-compose.yml  dual_session.py  exploit_chain_analyzer.py  (+65 more)
.github/ISSUE_TEMPLATE/: bug_report.md  false_positive.md  feature_request.md
.github/workflows/: ci.yml
core/: __init__.py  bug_registry.py  config.py  events.py  evidence.py  findings.py  program_profile.py  ratelimit.py  recon_expansion.py  reports.py  scanner.py  scheduler.py  scope.py  storage.py
core/agents/: __init__.py  access_control_agent.py  ai_advisory_agents.py  ai_triage_agent.py  auth_agent.py  base.py  crawler_agent.py  final_findings_presenter_agent.py  graphql_agent.py  header_agent.py  hunt_agents.py  (+10 more)
docs/: AGENTS.md  CLI.md  EXTERNAL_TOOLS.md  WEB3.md
examples/: auth-profile-userA.json  auth-profile-userB.json  burp-import-example-notes.md  program.yml
tests/: access_control_observation_tests.py  anti_overfit_tests.py  api_bucket_tests.py  auth_coverage_engine_tests.py  auth_observation_tests.py  auth_session_tests.py  autonomous_planner_tests.py  autopilot_goal_tests.py  cli_tests.py  core_runtime_tests.py  cors_misconfiguration_tests.py  detector_gap_tests.py  e2e_pipeline_test.py  ecosystem_foundation_tests.py  ecosystem_workflow_tests.py  external_tool_integration_tests.py  final_findings_tests.py  fresh_scope_hunter_tests.py  generic_agent_evidence_tests.py  graphql_observation_tests.py  legacy_language_tests.py  offline_test_suite.py  ollama_ai_triage_tests.py  open_redirect_passive_tests.py  playbook_engine_tests.py  program_intelligence_contract_tests.py  program_intelligence_tests.py  rate_limit_agent_tests.py  recon_expansion_tests.py  report_export_hackerone_tests.py  report_snapshot_tests.py  request_safety_tests.py  scan_budget_tests.py  scope_file_tests.py  skill_system_tests.py  ssrf_candidate_detection_tests.py  standalone_core_tests.py  standalone_scanner_e2e_tests.py  swarm_blackboard_tests.py  train_feedback_tests.py  (+3 more)
(+33 files in other folders)
